--- a/Aula1406/Aula1406/Views/Shared/_Layout.cshtml
+++ b/Aula1406/Aula1406/Views/Shared/_Layout.cshtml
@@ -20,9 +20,13 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    @*<li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
+                    <li>@Html.ActionLink("Lista Categoria", "Index", "Categorias")</li>
+                    <li>@Html.ActionLink("Adicionar Categoria", "Create", "Categorias")</li>
+                    <li>@Html.ActionLink("Editar Categoria", "Edit", "Categorias")</li>
+
                 </ul>
             </div>
         </div>
