--- a/WingtipToys_MVC/Web/Views/Shared/_Layout.cshtml
+++ b/WingtipToys_MVC/Web/Views/Shared/_Layout.cshtml
@@ -35,6 +35,17 @@
                             </li>                            
                         </ul>
                     </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Produto <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                @Html.ActionLink("Cadastro", "Create", "Produtos")
+                            </li>
+                            <li>
+                                @Html.ActionLink("Listagem", "Index", "Produtos")
+                            </li>
+                        </ul>
+                    </li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
