Adição do projeto final

--- a/ProjetoFinal/ProjetoFinal/Views/Home/Index.cshtml
+++ b/ProjetoFinal/ProjetoFinal/Views/Home/Index.cshtml
@@ -1,31 +1,29 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Páina principal";
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Livro</h1>
+    <p class="lead">Livro (do latim liber, um termo relacionado com a cortiça da árvore) é um objeto transportável, composto por páginas encadernadas, contendo texto manuscrito ou impresso e/ou imagens e que forma uma publicação unitária (ou foi concebido como tal) ou a parte principal de um trabalho literário, científico ou outro, formando um volume.</p>
+    <p><a href="https://pt.wikipedia.org/wiki/Livro" class="btn btn-primary btn-lg">Saiba mais &raquo;</a></p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>O futuro das bibliotecas</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            Nos dias atuais, as bibliotecas vêm se adaptando ao processo de inovações tecnológicas ocorridas com a evolução da humanidade, sendo que uma das principais características da biblioteca do futuro, é que a mesma apresentará não mais o volume do seu acervo, e sim a disponibilidade de poder disseminar informações com outras instituições através das novas tecnologias informacionais. Apesar de ainda mostrar muito fôlego, os livros, que compõem a maior parte dos acervos das bibliotecas físicas, provavelmente em um futuro próximo, serão armazenados em multimídias, Internet e outros mecanismos de armazenamento de dados eletrônicos.<p>
         </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="https://pt.wikipedia.org/wiki/Biblioteca#Teoria_sobre_o_futuro_das_bibliotecas">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2>Poder da leitura</h2>
+        <p>A leitura abre uma possibilidade de o leitor compreender o mundo em que habita; expande seus conhecimentos e o transforma em protagonista de sua história e da sociedade à qual pertence. Os livros desvendam os mistérios do cosmo, do sistema solar, do planeta, da biosfera, da história das diversas civilizações,  da cultura, das línguas, e comportamentos.</p>
+        <p><a class="btn btn-default" href="http://www.recantodasletras.com.br/cronicas/957123">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>Futuro do livro</h2>
+        <p>Decretos do “apocalipse do livro” não são novidades e nem vieram junto com o livro digital como podem imaginar alguns. O historiador e diretor da Biblioteca da Universidade de Harvard Robert Darnton, que abriu nesta quinta-feira (25), o Congresso CBL do Livro Digital, lembrou que, em 1928, Walter Benjamin já dizia que, ao que tudo indicava, o livro estaria chegando ao seu fim.</p>
+        <p><a class="btn btn-default" href="http://www.publishnews.com.br/materias/2016/08/26/futuro-do-livro-digital-e-impresso-continuarao-dividindo-espaco">Learn more &raquo;</a></p>
     </div>
 </div>
