--- a/ProjetoFinal/ProjetoFinal/Views/Manage/ChangePassword.cshtml
+++ b/ProjetoFinal/ProjetoFinal/Views/Manage/ChangePassword.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ProjetoFinal.Models.ChangePasswordViewModel
 @{
-    ViewBag.Title = "Change Password";
+    ViewBag.Title = "Alterar Senha";
 }
 
 <h2>@ViewBag.Title.</h2>
