--- a/ProjetoFinal/ProjetoFinal/Views/Account/Register.cshtml
+++ b/ProjetoFinal/ProjetoFinal/Views/Account/Register.cshtml
@@ -1,16 +1,23 @@
 ﻿@model ProjetoFinal.Models.RegisterViewModel
 @{
-    ViewBag.Title = "Register";
+    ViewBag.Title = "Criar usuário";
 }
 
 <h2>@ViewBag.Title.</h2>
 
 @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
+{   
+
     @Html.AntiForgeryToken()
-    <h4>Create a new account.</h4>
+    <h4>Criar uma nova conta.</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
+    if (ViewBag.Menssagem != null)
+    {
+        <div class="form-group">
+                <div class="col-md-10">@ViewBag.Menssagem</div>
+            </div>
+    }
     <div class="form-group">
         @Html.LabelFor(m => m.Nome, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
@@ -41,17 +48,24 @@
             @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
         </div>
     </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.Idade, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Idade, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Idade, "", new { @class = "text-danger" })
+        </div>
+    </div>
     <!--Selecione o Tipo de Perfil para o usuário-->
     <div class="form-group">
         @Html.Label("Selecione o Tipo de Perfil do Usuário", new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            @Html.DropDownList("Name")
+            @Html.DropDownList("Name", (IEnumerable<SelectListItem>)ViewBag.Name, new { @class = "form-control" })
         </div>
     </div>
   <!--termina aqui-->
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Register" />
+            <input type="submit" class="btn btn-default" value="Registrar" />
         </div>
     </div>
 }
