--- a/ProjetoFinal/ProjetoFinal/Views/Role/Index.cshtml
+++ b/ProjetoFinal/ProjetoFinal/Views/Role/Index.cshtml
@@ -1,25 +1,32 @@
 ﻿@model IEnumerable<Microsoft.AspNet.Identity.EntityFramework.IdentityRole>
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Perfis de usuários";
 }
-<h2>Perfis Disponíveis</h2>
-<p>
-    @Html.ActionLink("Criar Novo Perfil", "Create")
-</p>
+<h2>@ViewBag.Title</h2>
+
 <table class="table">
     <tr>
         <th>
-            @Html.Label("Nome do Perfil")
+            @Html.DisplayNameFor(model => model.Name)
         </th>
-        <th></th>
     </tr>
+
     @foreach (var item in Model)
     {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
+            <td>
+                @Html.ActionLink("Alterar", "Edit", new { id = item.Id }) |
+                @Html.ActionLink("Excluir", "Delete", new { id = item.Id })
+            </td>
         </tr>
     }
+
 </table>
+
+<p>
+    @Html.ActionLink("Adicionar novo perfil", "Create", null, new { @class = "btn btn-primary" })
+</p>
 
