--- a/ProjetoFinal/ProjetoFinal/Views/Shared/_Layout.cshtml
+++ b/ProjetoFinal/ProjetoFinal/Views/Shared/_Layout.cshtml
@@ -17,15 +17,15 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Catálogo de Livros", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Adicionar perfil", "Index", "Role")</li>
-
+                <ul class="nav navbar-nav navbar-left">
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <li>@Html.ActionLink("Livros", "Index", "Livros")</li>
+                        <li>@Html.ActionLink("Genêros", "Index", "Literaturas")</li>
+                    }                    
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
@@ -35,7 +35,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Cleverson Lezainski</p>
         </footer>
     </div>
 
