--- a/ProjetoFinal/ProjetoFinal/Views/Shared/_LoginPartial.cshtml
+++ b/ProjetoFinal/ProjetoFinal/Views/Shared/_LoginPartial.cshtml
@@ -13,7 +13,8 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="true">Usuários<span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
                         <li>@Html.ActionLink("Novo usuário", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
-                        <li>@Html.ActionLink("Perfis de usuário", "Index", "Role")</li>                        
+                        <li>@Html.ActionLink("Perfis de usuário", "Index", "Role")</li>   
+                        <li><a href="~/Relatorios/ListaDeUsuarios.aspx" target="_blank">Relatório</a></li>                     
                     </ul>
                 </li>
             }            
